<resources>
    <string name="app_name">b07project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login">Login</string>
    <string name="previous">Previous</string>

    <string name="schedule_event_button">Schedule a new event</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_event_detail_host">EventDetailHostActivity</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>

    <string name="menuitem_home">Home</string>
    <string name="menuitem_events">Events</string>
    <string name="menuitem_venues">Venues</string>
    <string name="menuitem_account">Account</string>
    <string name="email_edit_text">Email</string>

    <string name="menuitem_newvenue">Create Venue</string>

    <string name="password_edit_text">Password</string>
    <string name="username_signup">Username</string>
    <string name="password_signup">Password</string>

    <string name="email_signup">Email</string>
    <string name="full_name">Full Name</string>

    <string name="password_confirmation_signup">Confirm Password</string>
    <string name="scheduled_events">Scheduled Events</string>
    <string name="joined_events">Joined Events</string>
    <string name="display_time">%1$s - %2$s</string>
    <string name="no_events_to_show">No events to display!</string>
    <string name="event_creator">Created by: %1$s</string>

    <string name="change_full_name_text">Edit Full Name:</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>

    <string name="admin_venues">Your venues</string>
    <string name="no_venues">No venues to display!</string>

    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="venue">Venue:</string>
    <string name="sport">Sport:</string>
    <string name="admin_event_creator">Created by:</string>
    <string name="edit_event">EDIT</string>
    <string name="delete_event">DELETE</string>
    <string name="admin_events_header">"Events scheduled at your venues"</string>
    <string name="filter_venues">FILTER BY VENUE</string>
    <string name="select_venues">Select desired venues</string>
    <string name="apply_filter">APPLY</string>
    <string name="event_id">Event ID:</string>

    <string name="please_provide_the_following_information">Enter venue information</string>
    <string name="venue_name">Venue name</string>
    <string name="venue_location">Venue location</string>
    <string name="accessible_sports">Accessible sports</string>
    <string name="add">Add</string>

    <string name="create_a_venue">Create a venue</string>
    <string name="event_name">Event name</string>
    <string name="select_sport">Select sport</string>
    <string name="event_capacity_enter_a_number">Event capacity (enter a number)</string>
    <string name="event_date">Event Date</string>
    <string name="event_start_time">Event start time</string>
    <string name="event_end_time">Event end time</string>
    <string name="submit">Submit</string>
    <string name="venue_name_venuelist">Venue Name</string>
    <string name="venue_location_venuelist">Venue Location</string>
    <string name="eventname">eventName</string>
    <string name="eventcapacity">eventCapacity</string>
    <string name="eventdate">eventDate</string>
    <string name="eventstarttime_eventendtime">eventStartTime-eventEndTime</string>


</resources>